Fix text align property in orange chicken recipe
Change the text-align property to justify for the
paragraghs in description section.

--- a/recipes/styles_2.css
+++ b/recipes/styles_2.css
@@ -34,3 +34,7 @@ section {
 .content {
     color: white;
 }
+
+.top.section .content {
+    text-align: justify;
+}
